add grades and attendace